@@ -7,6 +7,7 @@ Current Level Cap: 25
 INTRO TEXT
 
 Additions:
+ - Added leaderboard for Enemies Defeated.
  - Discord rich presence displays turn count in battle.
 
 Changes:
